Configured image-storage for railway deployment