@@ -28,8 +28,8 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
+import java.util.Arrays;
 
 @Configuration
 @EnableWebSecurity
@@ -74,19 +74,19 @@ public class SecurityConfig {
     @Bean
     public ClientRegistrationRepository clientRegistrationRepository() {
         ClientRegistration googleRegistration = ClientRegistration.withRegistrationId("google")
-            .clientId(googleClientId)
-            .clientSecret(googleClientSecret)
-            .clientAuthenticationMethod(ClientAuthenticationMethod.CLIENT_SECRET_BASIC)
-            .authorizationGrantType(AuthorizationGrantType.AUTHORIZATION_CODE)
-            .redirectUri("{baseUrl}/login/oauth2/code/{registrationId}")
-            .scope("openid", "profile", "email")
-            .authorizationUri("https://accounts.google.com/o/oauth2/v2/auth")
-            .tokenUri("https://www.googleapis.com/oauth2/v4/token")
-            .userInfoUri("https://www.googleapis.com/oauth2/v3/userinfo")
-            .userNameAttributeName(IdTokenClaimNames.SUB)
-            .jwkSetUri("https://www.googleapis.com/oauth2/v3/certs")
-            .clientName("Google")
-            .build();
+                .clientId(googleClientId)
+                .clientSecret(googleClientSecret)
+                .clientAuthenticationMethod(ClientAuthenticationMethod.CLIENT_SECRET_BASIC)
+                .authorizationGrantType(AuthorizationGrantType.AUTHORIZATION_CODE)
+                .redirectUri("{baseUrl}/login/oauth2/code/{registrationId}")
+                .scope("openid", "profile", "email")
+                .authorizationUri("https://accounts.google.com/o/oauth2/v2/auth")
+                .tokenUri("https://www.googleapis.com/oauth2/v4/token")
+                .userInfoUri("https://www.googleapis.com/oauth2/v3/userinfo")
+                .userNameAttributeName(IdTokenClaimNames.SUB)
+                .jwkSetUri("https://www.googleapis.com/oauth2/v3/certs")
+                .clientName("Google")
+                .build();
 
         return new InMemoryClientRegistrationRepository(googleRegistration);
     }
@@ -94,12 +94,30 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:8083")); // Allow frontend
+
+        // Get allowed origins from environment variable or use defaults
+        String allowedOriginsStr = System.getenv("ALLOWED_ORIGINS");
+        List<String> allowedOrigins;
+
+        if (allowedOriginsStr != null && !allowedOriginsStr.isEmpty()) {
+            // Split comma-separated list of allowed origins
+            allowedOrigins = Arrays.asList(allowedOriginsStr.split(","));
+        } else {
+            // Default allowed origins for local development
+            allowedOrigins = List.of(
+                    "http://localhost:8083",
+                    "http://localhost:19006",
+                    "http://localhost:19000",
+                    "https://app.yourdomain.com" // Railway frontend domain
+            );
+        }
+
+        configuration.setAllowedOrigins(allowedOrigins);
         configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("Authorization", "Content-Type", "x-auth-token"));
         configuration.setExposedHeaders(List.of("x-auth-token"));
         configuration.setAllowCredentials(true); // Enable credentials for authentication
-        
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
@@ -108,22 +126,21 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http.csrf(csrf -> csrf.disable())
-            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-            .authorizeHttpRequests(auth -> auth
-                .requestMatchers("/api/auth/register").permitAll()  // ✅ Explicitly allow registration
-                .requestMatchers("/api/auth/signup").permitAll()
-                .requestMatchers("/api/auth/signin").permitAll()
-                .requestMatchers("/api/auth/**").permitAll()
-                .requestMatchers("/api/hello").permitAll()
-                .requestMatchers("/", "/error", "/favicon.ico").permitAll()
-                .requestMatchers("/api/cache/**").permitAll() // For development
-                .anyRequest().authenticated()
-            )
-            .oauth2Login(oauth2 -> {
-                oauth2.clientRegistrationRepository(clientRegistrationRepository());
-                oauth2.successHandler(oAuth2AuthenticationSuccessHandler);
-            });
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers("/api/auth/register").permitAll() // ✅ Explicitly allow registration
+                        .requestMatchers("/api/auth/signup").permitAll()
+                        .requestMatchers("/api/auth/signin").permitAll()
+                        .requestMatchers("/api/auth/**").permitAll()
+                        .requestMatchers("/api/hello").permitAll()
+                        .requestMatchers("/", "/error", "/favicon.ico").permitAll()
+                        .requestMatchers("/api/cache/**").permitAll() // For development
+                        .anyRequest().authenticated())
+                .oauth2Login(oauth2 -> {
+                    oauth2.clientRegistrationRepository(clientRegistrationRepository());
+                    oauth2.successHandler(oAuth2AuthenticationSuccessHandler);
+                });
 
         http.authenticationProvider(authenticationProvider());
         http.addFilterBefore(authenticationJwtTokenFilter(), UsernamePasswordAuthenticationFilter.class);
